--- a/style.css
+++ b/style.css
@@ -1,334 +1,355 @@
-body{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: 'Open Sans', sans-serif;
-    color: rgb(59, 71, 84);
+body {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
+  color: rgb(59, 71, 84);
 }
 
-header{
-    justify-content: space-between;
-    padding: 1.5em 5em;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    border-bottom: 1.5px solid rgb(35, 35, 35, .2);
+header {
+  justify-content: space-between;
+  padding: 1.5em 5em;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  border-bottom: 1.5px solid rgb(35, 35, 35, 0.2);
 }
 
-.logo img{
-    height: 30px;
-    width: 90px;
+.logo img {
+  height: 45px;
+  width: 135px;
 }
 
-.navbar{
-    border: 1px solid rgb(41,50,61,255);
-    padding: 6px 20px;
-    border-radius: 3px;
-    border-collapse: collapse;
+.navbar {
+  padding: 6px 20px;
+  border-radius: 3px;
+  border-collapse: collapse;
 }
 
-.navbar button{
-    border: none;
-    border-collapse: collapse;
-    background-color: transparent;
-    font-size: 17px;
+.navbar button {
+  border: 1px solid rgb(41, 50, 61, 255);
+  padding: 7px 17px;
+  background-color: transparent;
+  font-size: 17px;
+  margin-right: 10px;
 }
 
-.navbar button a{
-    font-style: none;
+.navbar button:hover {
+  background-color: rgb(121, 141, 163, 0.15);
 }
 
-.banner{
-    padding: 25px;
-    text-align: center;
+.navbar button a {
+  text-decoration: none;
+  color: black;
 }
 
-.banner h1{
-    font-size: 35px;
+.banner {
+  padding: 25px;
+  text-align: center;
 }
 
-.banner h4{
-    color: rgb(121, 141, 163);
-    font-weight: unset;
+.banner h1 {
+  font-size: 35px;
 }
 
-.content{
-    align-items: center;
-    text-align: center;
-    padding-bottom: 50px;
+.banner h4 {
+  color: rgb(121, 141, 163);
+  font-weight: unset;
 }
 
-.photo{
-    width: 600px;
-    height: 370px;
-    padding-bottom: 35px;
-    border-radius: 10px;
+.content {
+  align-items: center;
+  text-align: center;
+  padding-bottom: 50px;
 }
 
-.account{
-    display: flex;
-    padding: 35px 45px;
+.slider {
+  position: relative;
+  padding-bottom: 35px;
+  width: 600px;
+  height: 370px;
+  overflow: hidden;
 }
 
-.account-circle{
-    width: 75px;
-    height: 75px;
-    border-radius: 50%;
-    background-color: rgba(237,240,244,255);
-    margin-top: 4px;
-    font-size: 40px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
+.slider img {
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
 }
 
-.account-name{
-    padding-left: 20px;
-    text-align: left;
-    line-height: .5;
-    padding-bottom: 50px;
+.slider img.active {
+  opacity: 1;
 }
 
-.account-name i{
-    color: rgb(121, 141, 163);
+.account {
+  display: flex;
+  padding: 35px 45px;
 }
 
-hr{
-    width: 150px;
-    height: 5px;
-    background-color: rgb(35, 35, 35, .07);
-    border: none;
-    border-radius: 3px;
-    margin-top: -40px;
+.account-circle {
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  background-color: rgba(237, 240, 244, 255);
+  margin-top: 4px;
+  font-size: 40px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
-.content-describe{
-    text-align: left;
-    font-size: 18px;
-    line-height: 1.5;
+.account-name {
+  padding-left: 20px;
+  text-align: left;
+  line-height: 0.5;
+  padding-bottom: 50px;
 }
 
-.content-list{
-    display: flex;
+.account-name i {
+  color: rgb(121, 141, 163);
 }
 
-.list{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: rgba(237,240,244,255);
-    color: rgb(121, 141, 163);
-    margin-top: 10px;
-    font-size: 24px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    font-weight: bolder;
+hr {
+  width: 150px;
+  height: 5px;
+  background-color: rgb(35, 35, 35, 0.07);
+  border: none;
+  border-radius: 3px;
+  margin-top: -40px;
 }
 
-.desc-list{
-    display: flex;
-    text-align: left;
-    color: rgb(121, 141, 163);
-    padding-left: 15px;
-    padding-bottom: 10px;
-    font-size: 14px;
-    line-height: 1.5;
+.content-describe {
+  text-align: left;
+  font-size: 18px;
+  line-height: 1.5;
 }
 
-.wrap{
-    display: flex;
-    padding-right: 150px;
-    padding-left: 150px;
-    justify-content: space-between;
+.content-list {
+  display: flex;
 }
 
-.photo-desc i{
-    font-size: 20px;
-    color: rgb(121, 141, 163);
-    margin-left: -100px;
+.list {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: rgba(237, 240, 244, 255);
+  color: rgb(121, 141, 163);
+  margin-top: 10px;
+  font-size: 24px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  font-weight: bolder;
 }
 
-.form{
-    background-color: rgba(237,240,244,255);
-    border-radius: 10px;
-    padding: 20px 50px;
-    width: 300px;
-    height: 550px;
+.desc-list {
+  display: flex;
+  text-align: left;
+  color: rgb(121, 141, 163);
+  padding-left: 15px;
+  padding-bottom: 10px;
+  font-size: 14px;
+  line-height: 1.5;
 }
 
-.form h3{
-    font-size: 26px;
-    text-align: left;
+.wrap {
+  display: flex;
+  padding-right: 150px;
+  padding-left: 150px;
+  justify-content: space-between;
 }
 
-.form form label{
-    display: block;
-    justify-content: left;
-    align-items: start;
-    text-align: left;
+.photo-desc i {
+  font-size: 20px;
+  color: rgb(121, 141, 163);
+  margin-left: -100px;
 }
 
-.form p{
-    text-align: left;
-    font-size: 15px;
-    color: rgb(121, 141, 163);
+.form {
+  background-color: rgba(237, 240, 244, 255);
+  border-radius: 10px;
+  padding: 20px 50px;
+  width: 300px;
+  height: 550px;
 }
 
-input{
-    width: 300px;
-    height: 45px;
-    border-color: rgb(121, 141, 163, .3);
-    border-style: solid;
-    border-radius: 5px;
-    border-width: 3px;
-    font-size: 14px;
-    text-align: left;
-    padding-left: 10px;
+.form h3 {
+  font-size: 26px;
+  text-align: left;
 }
 
-select{
-    width: 310px;
-    height: 55px;
-    border-radius: 5px;
-    border-width: 3px;
-    border-style: solid;
-    border-color: rgb(121, 141, 163, .3);
-    color: rgb(121, 141, 163);
-    font-size: 14px;
-    text-align: left;
+.form form label {
+  display: block;
+  justify-content: left;
+  align-items: start;
+  text-align: left;
 }
 
-.button{
-    padding: 10px;
-    color: white;
-    border-radius: 3px;
-    border-style: none;
-    background-color: rgba(41,50,61,255);
-    width: 310px;
-    height: 45px;
-    cursor: pointer;
+.form p {
+  text-align: left;
+  font-size: 15px;
+  color: rgb(121, 141, 163);
 }
 
-.main-package{
-    padding-bottom: 50px;
+input {
+  width: 300px;
+  height: 45px;
+  border-color: rgb(121, 141, 163, 0.3);
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 3px;
+  font-size: 14px;
+  text-align: left;
+  padding-left: 10px;
 }
 
-.package{
-    font-size: 35px;
-    text-align: center;
-    background-color: rgba(237,240,244,255);
-    padding: 60px;
+select {
+  width: 310px;
+  height: 55px;
+  border-radius: 5px;
+  border-width: 3px;
+  border-style: solid;
+  border-color: rgb(121, 141, 163, 0.3);
+  color: rgb(121, 141, 163);
+  font-size: 14px;
+  text-align: left;
 }
 
-.package-container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    padding-left: 140px;
-}
-  
-.package-box{
-    padding-top: 100px;
-    padding-bottom: 50px;
-}
-
-.package-line{
-    width: 150px;
-    height: 5px;
-    background-color: rgb(35, 35, 35, .07);
-    border: none;
-    border-radius: 3px;
-    margin-top: 50px;
-    margin-bottom: -50px;
+.button {
+  padding: 10px;
+  color: white;
+  border-radius: 3px;
+  border-style: none;
+  background-color: rgba(41, 50, 61, 255);
+  width: 310px;
+  height: 45px;
+  cursor: pointer;
 }
 
-.box-warp{
-    display: flex;
-    width: 300px;
-    height: 150px;
+.main-package {
+  padding-bottom: 50px;
 }
 
-.box-content{
-    padding-left: 15px;
-    padding-top: 5px;
+.package {
+  font-size: 35px;
+  text-align: center;
+  background-color: rgba(237, 240, 244, 255);
+  padding: 60px;
 }
 
-.box-content h3{
-    line-height: 1;
+.package-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding-left: 140px;
 }
 
-.box-content p{
-    line-height: 1.3;
-    color: rgb(121, 141, 163);
+.package-box {
+  padding-top: 100px;
+  padding-bottom: 50px;
 }
 
-.list-box{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: rgba(237,240,244,255);
-    color: #a8b7c7;
-    margin-top: 10px;
-    font-size: 24px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
+.package-line {
+  width: 150px;
+  height: 5px;
+  background-color: rgb(35, 35, 35, 0.07);
+  border: none;
+  border-radius: 3px;
+  margin-top: 50px;
+  margin-bottom: -50px;
 }
 
-.call-head{
-    border-top: 1.5px solid rgb(35, 35, 35, .2);
-    margin-top: -50px;
-    padding: 2em;
+.box-warp {
+  display: flex;
+  width: 300px;
+  height: 150px;
 }
 
-.call-content{
-    text-align: center;
+.box-content {
+  padding-left: 15px;
+  padding-top: 5px;
 }
 
-.call-content h1{
-    font-size: 35px;
+.box-content h3 {
+  line-height: 1;
 }
 
-.call-content p{
-    color: rgb(121, 141, 163);
-    font-size: 17px;
-    line-height: 1.5;
+.box-content p {
+  line-height: 1.3;
+  color: rgb(121, 141, 163);
 }
 
-.div-btn{
-    display: flex;
-    padding: 50px;
-    justify-content: center;
+.list-box {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: rgba(237, 240, 244, 255);
+  color: #a8b7c7;
+  margin-top: 10px;
+  font-size: 24px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
-.call-button{
-    padding: 10px;
-    color: white;
-    border-radius: 3px;
-    border-style: none;
-    background-color: rgba(41,50,61,255);
-    width: 200px;
-    height: 45px;
-    cursor: pointer;
+.call-head {
+  border-top: 1.5px solid rgb(35, 35, 35, 0.2);
+  margin-top: -50px;
+  padding: 2em;
 }
 
-footer{
-    padding: 2em;
-    font-weight: 400;
-    font-size: 14px;
-    text-align: center;
-    border-top: 1px solid rgb(35, 35, 35, .2);
+.call-content {
+  text-align: center;
 }
 
-.logo-footer{
-    height: 16px;
-    width: 71px;
+.call-content h1 {
+  font-size: 35px;
 }
 
-.footer-text{
-    font-weight: 400;
-    font-family: 'Open Sans', sans-serif;
-    color: rgb(121, 141, 163);
+.call-content p {
+  color: rgb(121, 141, 163);
+  font-size: 17px;
+  line-height: 1.5;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+.div-btn {
+  display: flex;
+  padding: 50px;
+  justify-content: center;
+}
+
+.call-button {
+  padding: 10px;
+  color: white;
+  border-radius: 3px;
+  border-style: none;
+  background-color: rgba(41, 50, 61, 255);
+  width: 200px;
+  height: 45px;
+  cursor: pointer;
+}
+
+footer {
+  padding: 2em;
+  font-weight: 400;
+  font-size: 14px;
+  text-align: center;
+  border-top: 1px solid rgb(35, 35, 35, 0.2);
+}
+
+.logo-footer {
+  height: 30px;
+  width: 80px;
+}
+
+.footer-text {
+  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  color: rgb(121, 141, 163);
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
