--- a/style.css
+++ b/style.css
@@ -20,14 +20,9 @@ header {
   width: 135px;
 }
 
-.navbar {
-  padding: 6px 20px;
-  border-radius: 3px;
-  border-collapse: collapse;
-}
-
 .navbar button {
   border: 1px solid rgb(41, 50, 61, 255);
+  border-radius: 3px;
   padding: 7px 17px;
   background-color: transparent;
   font-size: 17px;
@@ -66,24 +61,14 @@ header {
 .slider {
   position: relative;
   padding-bottom: 35px;
-  width: 600px;
-  height: 370px;
   overflow: hidden;
 }
 
 .slider img {
   border-radius: 10px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.slider img.active {
-  opacity: 1;
+  width: 600px;
+  height: 370px;
+  display: none;
 }
 
 .account {
